@startuml diagrama_classes

' ============================================================================
' CAMADA DE SERVIÇOS (Lógica de Negócio)
' Representa a orquestração dos casos de uso do sistema
' ============================================================================
package "Camada de Serviços" <<Rectangle>> {
  class QuestionarioService {
    + listarTodos(): List<Questionario>
    + listarPorCriador(criadorId: Long): List<Questionario>
    + buscarPorId(id: Long): Questionario
    + criarQuestionario(titulo, criador, descricao, idBanner): Questionario
    + salvar(questionario: Questionario)
    + atualizar(questionario: Questionario, editor: Usuario)
    + apagarQuestionario(questionarioId: Long, usuario: Usuario)
    + adicionarItemEPersistir(questionarioId, item, editor): Long
    + removerItemEDeletar(questionarioId, itemId, editor)
    + editarItemEPersistir(questionarioId, item, editor)
  }

  class UsuarioService {
    + autenticar(email: String, senha: String): Usuario
    + buscarPorId(id: Long): Usuario
    + cadastrarUsuario(usuario: Usuario): Long
    + atualizarNome(id: Long, novoNome: String)
    + atualizarFoto(id: Long, novoIdFoto: int)
    + alterarSenha(id: Long, senhaAntiga, senhaNova)
  }

  class ResultadoService {
    + listarPorRespondente(respondenteId: Long): List<ResultadoQuestionario>
    + criarResultado(questionario, respondente): ResultadoQuestionario
    + buscarPorId(id: Long): ResultadoQuestionario
    + buscarResultado(questionario, respondente): ResultadoQuestionario
    + submeterRespostas(resultado: ResultadoQuestionario): Long
    + removerResultado(resultadoId: Long, usuario: Usuario)
    + finalizarResultado(resultado: ResultadoQuestionario)
  }

  class ItemService {
    + listarPorQuestionario(questionarioId: Long): List<Item<?>>
    + buscarPorId(id: Long): Item<?>
    + salvar(item: Item<?>, questionarioId: Long): Long
    + atualizar(item: Item<?>)
    + deletar(id: Long)
  }

  class RespostaService {
    + listarPorResultado(resultadoId: Long): List<Resposta>
    + buscarPorId(id: Long): Resposta
    + salvar(resposta: Resposta, resultadoId: Long): Long
    + atualizar(resposta: Resposta)
    + deletar(id: Long)
  }
}

note right of QuestionarioService
  Os Services representam a camada de
  lógica de negócio da aplicação.
  Eles orquestram os casos de uso e
  delegam a persistência para os DAOs.
end note

' --- Classe de Resultado (Respostas) ---
' NOVO: Esta classe representa a submissão de um
' questionário por um respondente.
class ResultadoQuestionario {
  - _questionario: Questionario {readonly}
  - _respondente: Usuario {readonly}
  - _listaRespostas: List<Resposta>
  - _dataSubmissao: LocalDate

  + ResultadoQuestionario(questionario: Questionario, respondente: Usuario)
  + adicionarResposta(resposta: Resposta)
  + editarResposta(item: Item, novaResposta: Resposta)
  + removerResposta(resposta: Resposta)
  + obterRespostas(): List<Resposta> {readonly}
  + obterRespondente(): Usuario
  + obterQuestionario(): Questionario
  + obterPontuacaoTotal(): double
  + obterPontuacaoMaxima(): double
  + obterPercentualAcerto(): double
}


' --- Classe Questionario (com Edição) ---
class Questionario {
  - _titulo: String
  - _descricao: String
  - _listaItens: List<Item>
  - _criador: Usuario
  - _idBanner: int
  - _dataCriacao: LocalDate

  ~ Questionario(builder: Builder)
  + obterTitulo(): String
  + obterDescricao(): String
  + obterListaItens(): List<Item> {readonly}
  + obterCriador(): Usuario
  + obterIdBanner(): int
  + obterDataCriacao(): LocalDate
  + obterPontuacaoMaxima(): double
  + adicionarItem(item: Item)
  + removerItem(item: Item)
  + alterarTitulo(titulo: String)
  + alterarDescricao(descricao: String)
}

' --- Classe Builder (Inalterada) ---
class Builder {
  - _titulo: String {readonly}
  - _criador: Usuario {readonly}
  - _descricao: String
  - _idBanner: int
  
  + Builder(titulo: String, criador: Usuario)
  + comDescricao(descricao: String): Builder
  + comIdBanner(idBanner: int): Builder
  + build(): Questionario
}

' --- Classes de Domínio Externas (Apoio) ---
class Usuario {
  - _nome: String
  - _email: String
  - _senha: String
  - _idFoto: int

  + Usuario(nome: String, email: String, senha: String)
  + Usuario(nome: String, email: String, senha: String, idFoto: int)
  + obterNome(): String
  + obterEmail(): String
  + obterIdFoto(): int
  + alterarNome(nome: String)
  + alterarSenha(senhaAntiga: String, senhaNova: String)
  + definirFoto(idFoto: int)
}

' --- Hierarquia de Itens (com Edição) ---
abstract class Item<T extends Resposta> {
  # _enunciado: String
  # _pontuacaoMaxima: double

  + Item(enunciado: String, pontuacaoMaxima: double)
  + obterEnunciado(): String
  + obterPontuacaoMaxima(): double
  + {abstract} repostaEstaCorreta(resposta: T): bool
  + {abstract} calcularPontuacao(resposta: T): double
  + alterarEnunciado(enunciado: String)
  + alterarPontuacaoMaxima(pontuacaoMaxima: double)
}

class QuestaoDissertativa extends Item<RespostaDissertativa> {
  - _gabarito: String

  + QuestaoDissertativa(enunciado: String, gabarito: String, pontuacaoMaxima: double)
  + obterGabarito(): String
  + repostaEstaCorreta(resposta: RespostaDissertativa): bool
  + calcularPontuacao(resposta: RespostaDissertativa): double
  + alterarGabarito(gabarito: String)
}

class QuestaoAlternativa extends Item<RespostaAlternativa> {
  - _listaAlternativas: List<Alternativa>

  + QuestaoAlternativa(enunciado: String, pontuacaoMaxima: double)
  + obterListaAlternativas(): List<Alternativa> {readonly}
  + adicionarAlternativa(alternativa: Alternativa)
  + adicionarAlternativa(descricao: String, estaCorreta: bool)
  + repostaEstaCorreta(resposta: RespostaAlternativa): bool
  + calcularPontuacao(resposta: RespostaAlternativa): double
  + removerAlternativa(alternativa: Alternativa)
  + editarAlternativa(antiga: Alternativa, nova: Alternativa)
}

class Alternativa {
  - _descricao: String
  - _estaCorreta: bool

  + Alternativa(descricao: String, estaCorreta: bool)
  + obterDescricao(): String
  + obterEstaCorreta(): bool
  + alterarDescricao(descricao: String)
  + definirComoCorreta(estaCorreta: bool)
}


' --- Hierarquia de Respostas (com Edição) ---
abstract class Resposta {
  # _itemId: Long {readonly}
  # _dataResposta: LocalDate {readonly}
  # _pontuacaoObtida: double

  + Resposta(itemId: Long)
  + obterItemId(): Long
  + obterPontuacaoObtida(): double
  + definirPontuacaoObtida(pontuacao: double)
}

class RespostaDissertativa extends Resposta {
  - _texto_resposta: String

  + RespostaDissertativa(itemId: Long, texto: String)
  + obterTexto(): String
  + alterarTexto(texto: String)
}

class RespostaAlternativa extends Resposta {
  - _alternativaSelecionada: Alternativa

  + RespostaAlternativa(respondente: Usuario, alternativa: Alternativa)
  + obterAlternativaSelecionada(): Alternativa
  + alterarAlternativaSelecionada(alternativa: Alternativa)
}


' --- Relacionamentos ---
' Composição (HAS-MANY, dono controla ciclo de vida)
Item "1..*" -* Questionario : "contém"
QuestaoAlternativa *- "2..*" Alternativa : "contém"
Resposta "1..*" -* ResultadoQuestionario : "contém"

' Agregação (HAS-A, usa objeto externo)
Usuario "1" -o Questionario : "criado por"
ResultadoQuestionario o- "1" Questionario : "refere-se a"
ResultadoQuestionario o-- "1" Usuario : "submetido por"
Resposta o- "1" Usuario : "dada por"
Alternativa "1" -o RespostaAlternativa : "seleciona"

' Dependência (Usa)
Item .> Resposta

' Relacionamento: Builder "cria" o Questionario
Questionario +--> Builder : "cria"

' Relacionamentos: Services usam as entidades de domínio
QuestionarioService .> Questionario : "gerencia"
QuestionarioService ..> Item : "gerencia"
UsuarioService ..> Usuario : "gerencia"
ResultadoService ..> ResultadoQuestionario : "gerencia"
Item <. ItemService : "gerencia"
RespostaService ..> Resposta : "gerencia"

' Relacionamentos entre Services
QuestionarioService .> ItemService : "usa"
RespostaService <. ResultadoService : "usa"
@enduml